fix social media links align right

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -178,6 +178,10 @@ h1,h2,h3 {
   }
 }
 
+.donate-and-socials {
+  display: flex;
+}
+
 #logo-container {
   display: inline;
   overflow: hidden;
